--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -8,7 +8,9 @@
     <script src="codigo.js"></script>
     <title>!XOR</title>
 </head>
-<body>
-    
+<body id="body">
+    <header id="title">
+        <h1>!XOR</h1>
+    </header>
 </body>
 </html>
