--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -10,7 +10,26 @@
 </head>
 <body id="body">
     <header id="title">
-        <h1>!XOR</h1>
+        <img src="https://img.genial.ly/5f97970f64ad990c6ee16673/6ccc2a17-3eed-4713-803d-0fa7b7e1c8b2.png" alt="">
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="equipo.html">Equipo</a>
+            <a href="contactanos.html">Contactanos</a>
+            <a href="servicios.html">Servivios</a>
+        </nav>
     </header>
+    <section>
+        <h1>¿Que somos?</h1>
+        <p>Somos una empresa dedicada al desarrollo de soluciones tecnológicas, 
+        dando acompañamiento a nuestros usuarios en cada paso que dan hacia el mundo moderno </p>
+        <h1>Mision</h1>
+        <p>"Crear herramientas tecnológicas que simplifiquen y 
+        soporten la labor diaria de nuestros clientes, 
+        adentrándolos al renacimiento tecnológico".</p>
+        <h1>Vision</h1>
+        <p>"Ser una de las empresas posicionadas como referentes de soluciones tecnológicas
+            en nuestro país y líderes de las mismas en la región del altiplano guatemalteco,
+            reconocidos por la ideología que poseemos y nos hace destacar".</p>      
+    </section>
 </body>
 </html>
