--- a/Proyecto/contactanos.html
+++ b/Proyecto/contactanos.html
@@ -28,5 +28,8 @@
         <h2>E-mail</h2>
         <p>team@xortech.dev</p>
     </section>
+    <footer>
+        <p>Copyraight@2023 Neyzer Paul Gómez López y Brayan Eduardo Gómez López</p>
+    </footer>
 </body>
 </html>
