--- a/Proyecto/equipo.html
+++ b/Proyecto/equipo.html
@@ -63,5 +63,8 @@
             </div>
         </section>
     </header>
+    <footer>
+        <p>Copyraight@2023 Neyzer Paul Gómez López y Brayan Eduardo Gómez López</p>
+    </footer>
 </body>
 </html>
