--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -31,5 +31,8 @@
             en nuestro país y líderes de las mismas en la región del altiplano guatemalteco,
             reconocidos por la ideología que poseemos y nos hace destacar".</p>      
     </section>
+    <footer>
+        <p>Copyraight@2023 Neyzer Paul Gómez López y Brayan Eduardo Gómez López</p>
+    </footer>
 </body>
 </html>
